style.css
@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans&family=Gowun+Batang&display=swap');

:root {
    --black: #0D100E;
    --green-base: #87AD94;
    --color-bg-default: #FeFeFd;
    --color-bg-lines: #E5E2DB;
    --color-text-default: #0E110F;
    --color-text-green: #338067;
    --color-ui-primary-button: #7BB794;
    --color-ui-primary-link: #338067;
    --color-ui-hover-bg: rgba(0,0,0,0);
    --color-ui-gallery-hover-bg: #FffFFE;

    --color-bg-darker: hsl(24, 100%, 99%);
    --color-bg-lighter: hsl(24, 50%, 97%);
}

html, body {
margin: 0 auto !important;
padding: 0 !important;
height: 100% !important;
width: 100% !important;
color:var(--color-text-default);
}

body {
  background-color:var(--color-bg-darker);
  background-image:
  radial-gradient(circle at 100% 150%, var(--color-bg-darker) 24%, var(--color-bg-lighter) 24%, var(--color-bg-lighter) 28%, var(--color-bg-darker) 28%, var(--color-bg-darker) 36%, var(--color-bg-lighter) 36%, var(--color-bg-lighter) 40%, transparent 40%, transparent),
  radial-gradient(circle at 0    150%, var(--color-bg-darker) 24%, var(--color-bg-lighter) 24%, var(--color-bg-lighter) 28%, var(--color-bg-darker) 28%, var(--color-bg-darker) 36%, var(--color-bg-lighter) 36%, var(--color-bg-lighter) 40%, transparent 40%, transparent),
  radial-gradient(circle at 50%  100%, var(--color-bg-lighter) 10%, var(--color-bg-darker) 10%, var(--color-bg-darker) 23%, var(--color-bg-lighter) 23%, var(--color-bg-lighter) 30%, var(--color-bg-darker) 30%, var(--color-bg-darker) 43%, var(--color-bg-lighter) 43%, var(--color-bg-lighter) 50%, var(--color-bg-darker) 50%, var(--color-bg-darker) 63%, var(--color-bg-lighter) 63%, var(--color-bg-lighter) 71%, transparent 71%, transparent),
  radial-gradient(circle at 100% 50%, var(--color-bg-lighter) 5%, var(--color-bg-darker) 5%, var(--color-bg-darker) 15%, var(--color-bg-lighter) 15%, var(--color-bg-lighter) 20%, var(--color-bg-darker) 20%, var(--color-bg-darker) 29%, var(--color-bg-lighter) 29%, var(--color-bg-lighter) 34%, var(--color-bg-darker) 34%, var(--color-bg-darker) 44%, var(--color-bg-lighter) 44%, var(--color-bg-lighter) 49%, transparent 49%, transparent),
  radial-gradient(circle at 0    50%, var(--color-bg-lighter) 5%, var(--color-bg-darker) 5%, var(--color-bg-darker) 15%, var(--color-bg-lighter) 15%, var(--color-bg-lighter) 20%, var(--color-bg-darker) 20%, var(--color-bg-darker) 29%, var(--color-bg-lighter) 29%, var(--color-bg-lighter) 34%, var(--color-bg-darker) 34%, var(--color-bg-darker) 44%, var(--color-bg-lighter) 44%, var(--color-bg-lighter) 49%, transparent 49%, transparent);
  background-size: 80px 40px;
}

.all-container{
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    padding: 2.4em;
}

.profile-card{
    display: flex;
    flex-direction: column;
    padding: 40px 40px;
    background-color: #ffffff;
    border-radius: 16px;
    box-shadow:0 0 40px rgba(14,17,18,0.05);
    max-width: 480px;
}

.footer-links{
    display: flex;
    flex-direction: row;
    padding-top: 2em;
}

.footer-links a{
    padding: 0 1em;
}


h1{
    font-family: 'Gowun Batang', sans-serif;
    font-size: 2.4em;
    letter-spacing: -.02em;
}

p{
    font-size: 1.32em;
    font-family: 'Alegreya Sans', sans-serif;
    line-height: 1.64em;
}

a{
    color: var(--color-ui-primary-link);
}

a:hover{
    color: var(--black); 
}

table {
border-spacing: 0 !important;
border-collapse: collapse !important;
table-layout: fixed !important;
margin: 0 auto !important;
}

td.button {
background-color: #FDFBF2;
padding: 12px 12px;
}
a.button {
color: #0D100E;
font-size: 1.25em;
font-weight: 900;
display: inline-block;
}

